update google map key

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_TEMPLATES_TOKEN=v3srs6i1veetv3b2dolta9shrmttl72vnfzm220z
+REACT_APP_GOOGLE_MAP_KEY=AIzaSyBmL8Q_z4xS2GvkdDgzo-g8FR8_bgF2dJo
